--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 body {
-  background-color: white;
+  background-color: black;
   border: 10px solid black;
 }
 
 img {
-  border: 8px solid white;
+  border: 8px solid black;
 }
